<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="aktivitaeten">Aktivities</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="cab_delete">delete action</string>
    <string name="hello_world">Hello world!</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="editText_hint_quantity">Number</string>
    <string name="editText_hint_product">Product</string>
    <string name="button_add_product">+</string>

    <string name="editText_errorMessage">The field must not be empty.</string>

    <string name="cab_change">Change entry</string>
    <string name="cab_checked_string">picked</string>

    <string name="dialog_title">Change list entry</string>
    <string name="dialog_title_quantity">Number:</string>
    <string name="dialog_title_product">Product:</string>
    <string name="dialog_button_positive">Change</string>
    <string name="dialog_button_negative">Cancel</string>
    <string name="password">Password</string>
    <string name="add_activity">Add activity</string>
    <string name="name">Name</string>
    <string name="activity_title">Activity title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="sport">Sport</string>
    <string name="party">Party</string>
    <string name="culture">culture</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="title_activity_karte" translatable="false">karteActivity</string>
    <string name="title_activity_add_akt">Add Activity</string>
    <string name="title_activity_profil" translatable="false">profilActivity</string>
    <string name="title_activity_suchmaske" translatable="false">suchmaskeActivity</string>
    <string name="title_activity_settings" translatable="false">settingsActivity</string>
    <string name="title_activity_aktivitaeten">Activities</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_timer">Timer</string>
    <string name="aktivit_ten">Activities:</string>
    <string name="create_activity">Create activity</string>
    <string name="place">Place</string>
    <string name="time_zeichen">Time:</string>
    <string name="place_zeichen">Place:</string>
    <string name="name_zeichen">Name:</string>
    <string name="cancel_alarm">cancel alarm</string>
    <string name="open_time_picker">open time picker</string>
    <string name="no_alarm_set">No Alarm set</string>
    <string name="timer">Timer</string>
    <string name="aktivit_ten_liste">Activities List</string>
    <string name="aktivit_t_hinzuf_gen">Add Activity</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="attempt">attempt</string>
</resources>
